[gd_scene load_steps=4 format=3 uid="uid://bhnyshfdcev2b"]

[ext_resource type="Script" uid="uid://yquc85bc1klb" path="res://Scripts/enemy.gd" id="1_1f0kj"]
[ext_resource type="Texture2D" uid="uid://jmq82ep626r4" path="res://Assets/icon.svg" id="2_afpow"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cvnsp"]
size = Vector2(26, 26)

[node name="Enemy" type="RigidBody2D"]
script = ExtResource("1_1f0kj")

[node name="Marker2D (AttackOrigin)" type="Marker2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_afpow")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3.57628e-07)
shape = SubResource("RectangleShape2D_cvnsp")

[node name="GroundCheck" type="Node2D" parent="."]

[node name="RayCastGround" type="RayCast2D" parent="GroundCheck"]
target_position = Vector2(0, 25)

[node name="ShapeShiftTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="DecisionTimer" type="Timer" parent="."]

[connection signal="timeout" from="ShapeShiftTimer" to="." method="_on_shape_shift_timer_timeout"]
